update to spring boot 2.2.2 and use jre 8 alpine