@@ -15,7 +15,7 @@ import org.springframework.web.util.UriComponentsBuilder;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
-import java.util.List;
+import java.util.Collections;
 
 @Slf4j
 @RestController
@@ -36,7 +36,7 @@ public class SpecialityRestController {
     public SpecialityDto getSpeciality(@PathVariable("specialityId") @Valid @NotNull String specialityId) {
         log.debug("REST request to get Speciality: {}.", specialityId);
         return specialityService.getSpeciality(specialityId)
-                .orElseThrow(() -> new BadRequestException("entity.speciality.idnotexists", List.of(specialityId)));
+                .orElseThrow(() -> new BadRequestException("entity.speciality.idnotexists", Collections.singletonList(specialityId)));
     }
 
     @PostMapping
@@ -46,7 +46,7 @@ public class SpecialityRestController {
         log.debug("REST request to save Speciality: {}.", specialityDto);
 
         if (StringUtils.isEmpty(specialityDto.getId())) {
-            throw new BadRequestException("entity.speciality.idexists", List.of(specialityDto.getId()));
+            throw new BadRequestException("entity.speciality.idexists", Collections.singletonList(specialityDto.getId()));
         }
 
         SpecialityDto result = specialityService.saveSpeciality(specialityDto);
