@@ -12,7 +12,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import javax.validation.Valid;
-import java.util.List;
+import java.util.Collections;
 
 @Slf4j
 @RestController
@@ -32,7 +32,7 @@ public class OwnerRestController {
     public OwnerDto getOwner(@PathVariable("ownerId") long ownerId) {
         log.debug("REST request to get Owner: {}.", ownerId);
         return ownerService.getOwner(ownerId)
-                .orElseThrow(() -> new BadRequestException("entity.owner.idnotexists", List.of(ownerId)));
+                .orElseThrow(() -> new BadRequestException("entity.owner.idnotexists", Collections.singletonList(ownerId)));
     }
 
     @PostMapping
@@ -40,7 +40,7 @@ public class OwnerRestController {
         log.debug("REST request to save Owner: {}.", ownerDto);
 
         if (ownerDto.getId() != null) {
-            throw new BadRequestException("entity.owner.idexists", List.of(ownerDto.getId()));
+            throw new BadRequestException("entity.owner.idexists", Collections.singletonList(ownerDto.getId()));
         }
 
         OwnerDto result = ownerService.saveOwner(ownerDto);
