@@ -12,7 +12,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import javax.validation.Valid;
-import java.util.List;
+import java.util.Collections;
 
 @Slf4j
 @RestController
@@ -32,7 +32,7 @@ public class PetRestController {
     public PetDto getPet(@PathVariable("petId") long petId) {
         log.debug("REST request to get Pet: {}.", petId);
         return petService.getPet(petId)
-                .orElseThrow(() -> new BadRequestException("entity.pet.idnotexists", List.of(petId)));
+                .orElseThrow(() -> new BadRequestException("entity.pet.idnotexists", Collections.singletonList(petId)));
     }
 
     @PostMapping
@@ -40,7 +40,7 @@ public class PetRestController {
         log.debug("REST request to save Pet: {}.", petDto);
 
         if (petDto.getId() != null) {
-            throw new BadRequestException("entity.pet.idexists", List.of(petDto.getId()));
+            throw new BadRequestException("entity.pet.idexists", Collections.singletonList(petDto.getId()));
         }
 
         PetDto result = petService.savePet(petDto);
