@@ -12,7 +12,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import javax.validation.Valid;
-import java.util.List;
+import java.util.Collections;
 
 @Slf4j
 @RestController
@@ -32,7 +32,7 @@ public class PetTypeRestController {
     public PetTypeDto getPetType(@PathVariable("petTypeId") long petTypeId) {
         log.debug("REST request to get PetType: {}.", petTypeId);
         return petTypeService.getPetType(petTypeId)
-                .orElseThrow(() -> new BadRequestException("entity.petType.idnotexists", List.of(petTypeId)));
+                .orElseThrow(() -> new BadRequestException("entity.petType.idnotexists", Collections.singletonList(petTypeId)));
     }
 
     @PostMapping
@@ -40,7 +40,7 @@ public class PetTypeRestController {
         log.debug("REST request to save PetType: {}.", petTypeDto);
 
         if (petTypeDto.getId() != null) {
-            throw new BadRequestException("entity.petType.idexists", List.of(petTypeDto.getId()));
+            throw new BadRequestException("entity.petType.idexists", Collections.singletonList(petTypeDto.getId()));
         }
 
         PetTypeDto result = petTypeService.savePetType(petTypeDto);
