@@ -4,6 +4,7 @@ import lombok.Getter;
 import org.zalando.problem.AbstractThrowableProblem;
 import org.zalando.problem.Status;
 
+import java.util.Collections;
 import java.util.List;
 
 @Getter
@@ -12,7 +13,7 @@ public class BadRequestException extends AbstractThrowableProblem {
     private Object[] args;
 
     public BadRequestException(String messageId) {
-        this(messageId, List.of());
+        this(messageId, Collections.emptyList());
     }
 
     public BadRequestException(String messageId, List<Object> args) {
